fix mobile nav not overflowing

--- a/src/sass/base/_utility.scss
+++ b/src/sass/base/_utility.scss
@@ -41,7 +41,7 @@
 }
 
 .noScroll {
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 .hidden {
